--- a/stylesv2.css
+++ b/stylesv2.css
@@ -2,6 +2,8 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* Navbar */
+
 .corner-logo {
     display: flex;
     float: left;
@@ -18,6 +20,8 @@ body {
 .nav-adjustments a:hover {
     color: rgb(0, 153, 255)!important;
 }
+
+/* Homepage Picture Section & About Us */
 
 .homepage-pic {
     color: #00adb5;
@@ -78,15 +82,63 @@ body {
     left: 3.5rem;
 }
 
+/* Carousel & Company Profile */
+
 .carousel-profile {
     background-color: #eaeaea;
     padding: 5rem 3rem 3rem;
 }
 
-#myCarousel {
-    width: 50%;
+.border-radius {
+    border-radius: 50%;
 }
 
-.border-radius {
-    border-radius: 75%;
+/* Footer */
+
+.homepage-footer {
+    color: #f5f5f5;
+    background-color: #2b2a2a;
+    width: 100%;
+    line-height: 50px;
+}
+
+.footer-navigation {
+    display: flexbox;
+    margin-left: 3rem;
+    padding: 3rem;
+    width: 25%;
+}
+
+.footer-line {
+    display: flex;
+    position: relative;
+    top: 0.2rem;
+    width: 8rem;
+    border-top: 0.3rem solid #00adb5;
+}
+
+.footer-navigation ul{
+    list-style-type: none;
+    padding: 1rem 0 0 0;
+}
+
+.footer-navigation a {
+    color: #f5f5f5;
+    font-size: 0.95rem;
+    text-decoration: none;
+}
+
+.footer-navigation a:hover {
+    color: rgb(0, 153, 255) !important;
+}
+
+.footer-clock {
+    display: flexbox;
+    width: 40%;
+    padding: 3rem;
+}
+
+.iframe-clock {
+    position: relative;
+    top: 1.5rem;
 }
