--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,7 @@
 $bgLight:#eaeaea;
 $bgDark:#2b2a2a;
 $textLight: #f5f5f5;
-$hoverColor:rgb(0, 153, 255) !important;
+$hoverColor:rgb(0, 153, 255);
 
 @mixin round($radius) {
     border-radius: 50%;
@@ -10,7 +10,6 @@ $hoverColor:rgb(0, 153, 255) !important;
 body {
     background-color: $bgLight;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    z-index: -3;
 }
 
 /* Navbar */
@@ -22,12 +21,19 @@ body {
     width: 16rem;
 }
 
-.nav-adjustments {
+div.collapse > ul.navbar-nav > li.nav-adjustments {
     display: flex;
     text-align: center;
     padding: 1.5rem 2.5rem;
 
     a:hover {
+        color: $hoverColor;
+    }
+}
+
+div.collapse > ul.navbar-nav > li.active > a.nav-link {
+    color: #000;
+    &:hover {
         color: $hoverColor;
     }
 }
