--- a/styles.scss
+++ b/styles.scss
@@ -2,6 +2,7 @@ $bgLight:#eaeaea;
 $bgDark:#2b2a2a;
 $textLight: #f5f5f5;
 $hoverColor:rgb(0, 153, 255);
+$transparent: rgba(255, 0, 0, 0);
 
 @mixin round($radius) {
     border-radius: 50%;
@@ -70,29 +71,30 @@ div.collapse > ul.navbar-nav > li.active > a.nav-link {
 }
 
 .homepage-textbox {
-    border: 0.5rem solid #00adb5;
-    position: absolute;
-    margin: 1rem;
-    padding: 1.5rem;
-    top: 4rem;
-    left: 15.5rem;
+    background: linear-gradient(to left, rgba(0, 173, 181, 0.5) 50%, $transparent 50%);
     height: 19rem;
-    width: 50rem;
-    z-index: 10;
-}
-
-.pic-text {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 2.8rem;
+    width: 40rem;
     position: absolute;
-    top: 7.5rem;
-    left: 7.7rem;
+    right: 5rem;
+    top: 8rem;
+
+    #pic-text {
+        font-family: Georgia, Times, 'Times New Roman', serif;
+        position: inherit;
+        top: 8rem;
+        left: 9rem;
+        
+        .white-font {
+            color: $textLight;
+        }
+
+    }
 }
 
 .center-button {
     display: flex;
     position: absolute;
-    bottom: -11.5%;
+    bottom: -10%;
     left: 43%;
     z-index: 1;
 }
@@ -101,8 +103,9 @@ div.collapse > ul.navbar-nav > li.active > a.nav-link {
     background-color: $bgLight;
     border: none;
     @include round(50%);
-    height: 8rem;
-    width: 8rem;
+    font-size: 1.3rem;
+    height: 10rem;
+    width: 10rem;
     position: relative;
     transition: 0.3s;
 
@@ -119,19 +122,19 @@ div.collapse > ul.navbar-nav > li.active > a.nav-link {
 
     &::after {
         content: '';
-        background-image: url(./images/arrow.png);
-        height: 4rem;
-        width: 4rem;
+        background-image: url(./images/arrow1.png);
+        height: 8rem;
+        width: 8rem;
         position: absolute;
-        bottom: -0.6rem;
-        right: 1.85rem;
+        bottom: -1.7rem;
+        right: 1.2rem;
         opacity: 0;
         transition: 0.3s;
     }
 
     &:hover::after {
         opacity: 1;
-        transform: translateY(2.4rem);
+        transform: translateY(2.6rem);
     }
 }
 
@@ -146,7 +149,7 @@ div.collapse > ul.navbar-nav > li.active > a.nav-link {
     }
 
     to {
-        -webkit-transform: translateY(-2.4rem)
+        -webkit-transform: translateY(-3rem)
     }
 }
 
@@ -156,13 +159,13 @@ div.collapse > ul.navbar-nav > li.active > a.nav-link {
     }
 
     to {
-        transform: translateY(-2.4rem)
+        transform: translateY(-3rem)
     }
 }
 
 @-webkit-keyframes button-down {
     from {
-        -webkit-transform: translateY(-2.4rem);
+        -webkit-transform: translateY(-3rem);
     }
 
     to {
@@ -172,7 +175,7 @@ div.collapse > ul.navbar-nav > li.active > a.nav-link {
 
 @keyframes button-down {
     from {
-        transform: translateY(-2.4rem);
+        transform: translateY(-3rem);
     }
 
     to {
@@ -180,18 +183,8 @@ div.collapse > ul.navbar-nav > li.active > a.nav-link {
     }
 }
 
-#left-circle {
-    position: absolute;
-    transition: 0.3s;
-}
-
-#right-circle {
-    position: absolute;
-    transition: 0.3s;
-}
-
 #hidden-div {
-    background-color: $bgLight;
+    background-color: $transparent;
     display: none;
     padding: 10% 5% 5% 5%;
     position: relative;
